Bug #14290 wrong CHARACTER_MAXIMUM_LENGTH value for some text fields
Submitted: 25 Oct 2005 13:27 Modified: 31 Oct 2005 21:00
Reporter: Ramil Kalimullin
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version: OS:
Assigned to: Ramil Kalimullin Target Version:

[25 Oct 2005 13:27] Ramil Kalimullin
Description:
CHARACTER_MAXIMUM_LENGTH value has to be adjusted for multibyte text 
fields.

How to repeat:
mysql> create table t1(a blob, b text charset utf8, c text charset ucs2);
Query OK, 0 rows affected (0.01 sec)

mysql> select column_name, data_type, character_octet_length, character_maximum_length
from information_schema.columns where table_name='t1';
+-------------+-----------+------------------------+--------------------------+
| column_name | data_type | character_octet_length | character_maximum_length |
+-------------+-----------+------------------------+--------------------------+
| a           | blob      |                  65535 |                    65535 |
| b           | text      |                  65535 |                    65535 |
| c           | text      |                  65535 |                    65535 |
+-------------+-----------+------------------------+--------------------------+
3 rows in set (0.06 sec)
[25 Oct 2005 14:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/31450
[27 Oct 2005 16:42] Ramil Kalimullin
fixed in 5.0.16
[31 Oct 2005 21:00] Paul DuBois
Noted in 5.0.16 changelog.