Fix for bug #14290: wrong CHARACTER_MAXIMUM_LENGTH value for some text fields.